--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@ limitations under the License. -->
     <dimen name="small_padding">8dp</dimen>
     <dimen name="big_padding">16dp</dimen>
     <dimen name="min_height">48dp</dimen>
+    <dimen name="dp_8">8dp</dimen>
+    <dimen name="sp_2">20sp</dimen>
 </resources>
